GoblinTime/goblin-time-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: www.goblin-ti.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goblin-time
                port:
                  number: 8080
